[gd_scene load_steps=2 format=3 uid="uid://3tqx0f4g7hlj"]

[ext_resource type="Script" path="res://scripts/main/audio_server.gd" id="1_hdnxs"]

[node name="AudioManager" type="Node"]
process_mode = 3
script = ExtResource("1_hdnxs")
debug = true
button_pressed_sound_id = "African2"
button_focused_sound_id = "Minimalist2"
button_hovered_sound_id = "Minimalist2"

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
bus = &"Music"

[node name="Effects" type="Node2D" parent="."]

[connection signal="finished" from="MusicPlayer" to="." method="_on_music_finished"]
